Deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    first: app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: nginxcontainer
          image: nginx
          ports:
            - containerPort: 80
